# LabManger

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  build-release-simple.bat  项目接口api.md
.github/workflows/: node.js.yml  release.yml
LabMangerAPI/: AppConfig.cs  LabMangerAPI.csproj  Program.cs  private.key
LabMangerAPI/Controllers/: Inventory.cs  Lot.cs  Operation.cs  Signinout.cs  Team.cs  User.cs
LabMangerAPI/DTOs/: Inventory.cs  Lot.cs  Operation.cs  Reagent.cs  Signinout.cs  Team.cs  User.cs
LabMangerAPI/Data/: Main.cs  Migrate.cs
LabMangerAPI/LabMangerAPI/: LabMangerAPI.csproj  Program.cs  appsettings.json  self-sign.cer
LabMangerAPI/Models/: Inventory.cs  Lot.cs  Operation.cs  Reagent.cs  Team.cs  User.cs
LabMangerAPI/Repository/: Interface.cs  Inventory.cs  Lot.cs  Reagent.cs  (+3 more)
LabMangerNest/: api试剂管理.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json  试剂管理api.apifox.json
SugarSql/: Migrate.cs
barcode_printer/: Cargo.toml
barcode_printer/src/: main.rs
django/: requirements.txt  run.py
electron/: components.d.ts  conf.txt  main.js  package-lock.json  package.json  vite.config.js
electron-vite/: conf.txt  electron.vite.config.js  package-lock.json  package.json
fastify/: DEPLOY.md  app.js  app.ts  package-lock.json  package.json
old_fastify/: package-lock.json  test-permission-simple.js  tsconfig.json
vue/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
vue-project/: components.d.ts  conf.txt  main.js  package-lock.json  package.json  preload.js  vite.config.js
(+464 files in other folders)
