[package]
name = "barcode_silent_printer"
version = "0.1.0"
edition = "2021"



[dependencies]
anyhow = "1.0"
barcoders = { version = "2.0", features = ["image"] }
eframe = { version = "0.33", features = ["wgpu"] }
image = "0.25"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
egui = "0.33"  



